Rename hiking-beta profile to hiking-mountain
- remove " (beta)" in locale text, stick to plain "Hiking" as long as we have only one and base parameters stay the same
- map hash for old URLs

--- a/locales/en.json
+++ b/locales/en.json
@@ -197,7 +197,7 @@
       "fastbike": "Fastbike",
       "fastbike-asia-pacific": "Fastbike (Asia Pacific)",
       "fastbike-lowtraffic": "Fastbike (low traffic)",
-      "hiking-beta": "Hiking (beta)",
+      "hiking-mountain": "Hiking",
       "moped": "Moped",
       "rail": "Rail",
       "river": "River",
